# skills

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  RELEASE.md  apm.yml  gemini-extension.json  plugin.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
custom/docs-audit/: SKILL.md
custom/handoff-summary/: SKILL.md
custom/project-status-update/: SKILL.md
custom/react-state-safe-edit/: SKILL.md
custom/safe-ops-check/: SKILL.md
mdq/: __init__.py  cli.py  indexer.py  search.py  store.py  usage_stats.py  watcher.py
mdq.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
mdq/tests/: __init__.py  test_build_index_progress.py  test_chunking_overlap_and_parent.py  test_config.py  test_embeddings.py  test_fusion.py  test_pageindex_e2e.py  test_query_router.py  test_search_with_parent.py  test_sentence_splitter.py  test_store_migration.py  test_strategies_pageindex.py  test_strategies_semantic.py  test_usage_stats_routing.py
sample/: business-requirement.md  usecase-list.md
sample/services/: SVC-01-member-consent-service-description.md  SVC-02-loyalty-ledger-service-description.md
setup/: setup-markdown-query.ps1  setup-markdown-query.sh
skills/markdown-query/: SKILL.md
skills/markdown-query/examples/: prompt-snippets.md
skills/markdown-query/references/: cli-reference.md  (+5 more)
tools/markdown-query/: README.md  USAGE.md  __init__.py  benchmark.py  eval_semantic.py  generate_usage_report.py  launch-gui.cmd  launch-gui.ps1  launch-gui.sh  launch.py  pyproject.toml  queries.sample.txt  setup.ps1  setup.sh
tools/markdown-query/gui/: __init__.py  __main__.py  _widgets.py  extras_status.py  mdq_index_service.py  pageindex_options.py  search_preview_panel.py  semantic_options.py  settings_section.py  settings_store.py  standalone_window.py  threads.py
tools/markdown-query/gui/tests/: test_extras_status.py  test_mdq_index_service_ops.py  test_search_preview_panel.py  test_semantic_options.py  test_settings_section_phase3.py  test_settings_store_semantic.py
tools/markdown-query/tools/: capture_screenshots.py
tools/markdown-query/usage-report/: 2026-05-15.json  2026-05-15.md  2026-05-16.json  2026-05-16.md  2026-05-18.json  2026-05-18.md  2026-05-19.json  2026-05-19.md  2026-05-21.json  2026-05-21.md  2026-05-22.json  2026-05-22.md  2026-05-24.json  2026-05-24.md  2026-05-26.json  2026-05-26.md  2026-05-27.json  README.md  latest.md
(+5 files in other folders)
