[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdq"
version = "0.1.0"
description = "Local-only Markdown cross-file query toolkit (BM25 + semantic, stdlib-first)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "dahatake" }]
keywords = ["markdown", "search", "bm25", "semantic-search", "rag", "local"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing :: Indexing",
  "Operating System :: OS Independent",
]
dependencies = [
  "rank_bm25>=0.2.2",
  "tiktoken>=0.7.0",
]

[project.optional-dependencies]
semantic = ["fastembed>=0.3", "numpy>=1.26"]
watch    = ["watchdog>=4.0"]
gui      = ["PySide6>=6.6"]
dev      = ["pytest>=8", "build>=1.2", "twine>=5.0"]

[project.scripts]
mdq = "mdq.__main__:main"

[project.urls]
Homepage   = "https://github.com/dahatake/skills"
Repository = "https://github.com/dahatake/skills"
Issues     = "https://github.com/dahatake/skills/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["mdq*"]
exclude = ["mdq.tests*", "tools*", "sample*", "skills*", "setup*"]
